app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #1f1f1f;

  --primary: #f9f5f0;
  --secondary: #e2d3c3;
  --dark: #c4aa8d;
  --extra-dark: #51463e;

  --border-default: #cbc3bb;
  --border-muted: #e5ded6;
  --border-strong: #8d847c;

  --button-border-light: #a79d95;
  --button-text-light: #6a625c;

  --button-border-dark: rgba(255, 255, 255, 0.45);
  --button-text-dark: #f8f4ee;

  --button-circle: #e7dccf;
  --text-display-xl: clamp(2.5rem, 1.8rem + 2.5vw, 4.5rem); /* 40px → 72px */
  --text-display-lg: clamp(2rem, 1.5rem + 1.8vw, 3.5rem); /* 32px → 56px */
  --text-heading: clamp(1.5rem, 1.2rem + 1vw, 2.5rem); /* 24px → 40px */

  /* Hero title: 40px → 70px */
  --text-hero: clamp(2rem, 1.93rem + 2.86vw, 4rem);

  /* Section title: 32px → 60px */
  --text-section: clamp(2rem, 1.46rem + 2.29vw, 3.3rem);
  --text-brand: clamp(3rem,15vw,15rem);
  --text-180: clamp(3.5rem, 10vw, 12rem);
  --text-32: clamp(2rem,4vw,4.5rem);
  --text-20: clamp(1rem,2.5vw,1.25rem);
  --space-80: clamp(20px, 2.5vw, 80px);
  /* Container */
  --container-width: 1720px;

  /* Horizontal padding */
  --container-padding: clamp(20px, 5vw, 100px);

  /* Vertical spacing */
  --section-space: clamp(80px, 8vw, 120px);
  --space-120: clamp(50px, 4.93vw + 30.7px, 120px);
}

@theme inline {
  /* Colors */
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-secondary: var(--secondary);
  --color-dark: var(--dark);
  --color-extra-dark: var(--extra-dark);

  --color-border-default: var(--border-default);
  --color-border-muted: var(--border-muted);
  --color-border-strong: var(--border-strong);

  --color-button-border-light: var(--button-border-light);
  --color-button-border-dark: var(--button-border-dark);

  --color-button-text-light: var(--button-text-light);
  --color-button-text-dark: var(--button-text-dark);

  --color-button-circle: var(--button-circle);

  --spacing-container: var(--container-padding);
  --spacing-section: var(--section-space);
  --spacing-120: var(--space-120);

  /* Texts */
  --text-display: var(--text-display-xl);
  --text-hero: var(--text-hero);
  --text-section: var(--text-section);
  --text-180: var(--text-180);
  --text-32: var(----text-32);
  --text-20: var(----text-20);
  --text-brand: var(--text-brand);
  /* Fonts */
  --font-sans: var(--font-dm-sans);

  --spacing-80: var(--space-80);
}

body {
  font-family: var(--font-sans);
  background-color: var(--background);
  color: var(--foreground);
}

@utility bg-neuro-gradient {
  background-image: linear-gradient(to right, #7F6157, #C9B6AC, #BFA373, #7F6157);
}

